<package>
  <name>three_link</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for three_link</p>
    <p>This package contains configuration data, 3D models and launch files
for three_link robot</p>
  </description>
  <maintainer email="ibiaozi@163.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
